k8s/overlays/dev/waza-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waza-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: waza.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waza-app
                port:
                  number: 80
